Update TestLogger.java